@@ -1,5 +1,5 @@
 /*
- * Copyright 2003-2005 The Apache Software Foundation.
+ * Copyright 2003-2010 The Apache Software Foundation.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -83,6 +83,18 @@ public:
 
 	void registerHandler(const XMLCh * URI, const XSECAlgorithmHandler & handler);
 
+	/**
+	 * \brief Indicate an algorithm is approved for use, implying others are not.
+	 */
+
+	void whitelistAlgorithm(const XMLCh* URI);
+
+    /**
+     * \brief Indicate an algorithm is not approved for use, implying others are.
+     */
+
+	void blacklistAlgorithm(const XMLCh* URI);
+
 	//@}
 
 private:
@@ -98,12 +110,14 @@ private:
 
 #if defined(XSEC_NO_NAMESPACES)
 	typedef vector<MapperEntry *>			MapperEntryVectorType;
+    typedef vector<XMLCh*>                  WhitelistVectorType;
 #else
 	typedef std::vector<MapperEntry *>		MapperEntryVectorType;
+    typedef std::vector<XMLCh*>             WhitelistVectorType;
 #endif
 
-	mutable MapperEntryVectorType		m_mapping;
-
+	MapperEntryVectorType		            m_mapping;
+    WhitelistVectorType                     m_whitelist,m_blacklist;
 };
 
 /*\@}*/
